--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "number-sents"
 version = "0.1.0"
 description = "Number sentences in text"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "streamlit>=1.40.2",
     "spacy>=3.8.2",
